# adk-learning

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
financial_consultant/: agent.py  agentspace_integration.sh.example  deploy_agent_engine.py  prompt.py  schema.py  settings.py  tools.py
financial_consultant/sub_agents/data_entry/: agent.py  prompt.py
financial_consultant/sub_agents/finance/: agent.py  prompt.py
static/: index_audio.html  index_text.html  script_audio.js  script_text.js
story_teller/: agent.py  prompt.py  settings.py
