[project]
name = "adk-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.1",
    "google-adk>=0.3.0",
    "google-cloud-aiplatform>=1.90.0",
    "google-cloud-secret-manager>=2.23.3",
    "google-cloud-storage>=2.19.0",
    "gspread>=6.2.0",
]
